Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-24950

QThread names on Symbian are not informative

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • 4.8.x
    • 4.8.x
    • Core: Threads
    • None
    • Qt 4.8 for Symbian
    • Change-Id: Ifae9c6cb64638e95a01d34e421aa36f6fd0e7444

      QThreads in Qt 4.8 for Symbian are named with the object name + numbers. Many QThread objects are not named, so these thread names do not indicate what the thread is for.

      Investigate whether it is possible to use the class name as part of the thread name.

        For Gerrit Dashboard: QTBUG-24950
        # Subject Branch Project Status CR V

            mread Murray Read
            mread Murray Read
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes